Refactor HeuristicPurger lazy init to inner static class holder idiom
Replace double-checked locking (volatile + synchronized) for purgeExecutor
with Initialization-on-demand holder pattern, leveraging JVM class-loading
guarantees for thread-safe lazy initialization.

Also fix test files to use ImmutableList.of() for Java 8 compatibility.

Co-Authored-By: Claude <noreply@anthropic.com>